# jitterpug

./: .gitignore  .tintin.yml  .travis.yml  01-introduction.html  02-cmj.html  02-sample-generators.html  02-uniform.html  03-cmj.html  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  format.sh  hie.yaml  index.html  jitterpug.cabal  stack.yaml
.ci/: build.sh
app/docgen/: Main.hs
app/docgen/Graphics/Jitterpug/Diagrams/: CanonicalPixelSamples.hs
c-version/: Makefile  cmj  cmj.c
doc/: index.md
jitterpug/: format.sh  hie.yaml  jitterpug.cabal
jitterpug-benchmarks/: CHANGELOG.md  format.sh  jitterpug-benchmarks.cabal
jitterpug-benchmarks/app/: Main.hs
jitterpug-benchmarks/src/Jitterpug/PRNG/: Bench.hs
jitterpug-doc/: .tintin.yml  CHANGELOG.md  format.sh  jitterpug-doc.cabal  render-docs.sh
jitterpug-doc/app/: Main.hs
jitterpug-doc/doc/: 02-cmj.md  02-sample-generators.md  02-uniform.md  03-cmj.md  index.md
jitterpug-doc/src/Jitterpug/Doc/: CMJPixel.hs  Grid.hs  Sampling.hs  ZonePlate.hs
jitterpug-doc/src/Jitterpug/SampleGen/: Doc.hs
jitterpug/doctest/: Test.hs
jitterpug/src/Jitterpug/: CMJ.hs  Filter.hs  Geom.hs  Hashable.hs  Image.hs  ImageFn.hs  Imager.hs  OldPRNG.hs  PRNG.hs  Raster.hs  Sample.hs  SampleGen.hs  Sampler.hs  Tile.hs  UV.hs
jitterpug/src/Jitterpug/Image/: Types.hs
jitterpug/src/Jitterpug/PRNG/: Kensler.hs  Types.hs
jitterpug/src/Jitterpug/Raster/: Types.hs
jitterpug/src/Jitterpug/SampleGen/: Stratified.hs  Types.hs  Uniform.hs
jitterpug/test/: Test.hs
jitterpug/test/Jitterpug/CMJ/: Tests.hs
jitterpug/test/Jitterpug/PRNG/: Tests.hs
jitterpug/test/Jitterpug/SampleGen/: Tests.hs
jitterpug/test/Jitterpug/Test/: Histogram.hs  Util.hs
src/: Jitterpug.hs
src/Graphics/: Jitterpug.hs
src/Graphics/Jitterpug/: CMJS.hs
src/Jitterpug/: Bucket.hs  Filter.hs  Geom.hs  Image.hs  PRNG.hs  Sample.hs  SamplePositions.hs  Tile.hs
test/Jitterpug/PRNG/: Tests.hs
