cabal-version:      2.4
name:               jitterpug
version:            0.1.0.0
synopsis:           Correlated Multi-Jittered Sampling of 2D Images
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) 2020 Jitterpug Developers
category:           Graphics
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.8.3
description:
  Please see the README for the package at its homepage:
  https://github.com/lancelet/jitterpug

source-repository head
  type:     git
  location: git://github.com/lancelet/jitterpug.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.13.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:          base, ghc-options
  hs-source-dirs:  src
  build-depends:
    , massiv
    , vector

  other-modules:
    Jitterpug.Image.Types
    Jitterpug.PRNG.Kensler
    Jitterpug.PRNG.Types
    Jitterpug.Raster.Types
    Jitterpug.SampleGen.Stratified
    Jitterpug.SampleGen.Types

  exposed-modules:
    Jitterpug.Hashable
    Jitterpug.Image
    Jitterpug.PRNG
    Jitterpug.Raster
    Jitterpug.SampleGen
    Jitterpug.UV

test-suite jitterpug-tests
  import:         base, ghc-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Jitterpug.PRNG.Tests
    Jitterpug.SampleGen.Tests
    Jitterpug.Test.Histogram

  main-is:        Test.hs
  build-depends:
    , extra
    , hedgehog
    , jitterpug
    , primitive
    , tasty
    , tasty-hedgehog
    , vector

test-suite jitterpug-doctests
  import:         base, ghc-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is:        Test.hs
  build-depends:  doctest

executable jitterpug
  import:         base, ghc-options
  hs-source-dirs: app
  main-is:        Main.hs
